Add identity telemetry inventories
